@@ -1,3 +1,12 @@
+2026-02-19T01:54:16Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22165382317 # 882
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-19
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 221 288 / 223 290
+* notice: next accum: outdated-unq outdated-all / unq all: 223 290 / 224 291
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-01-22 2026-01-23 2026-01-24 2026-01-25 2026-01-26 2026-01-27 2026-01-28 2026-01-29 2026-01-30 2026-01-31 2026-02-01 2026-02-02] / []
+
 2026-02-18T01:55:31Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22123372088 # 881
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-18
